--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">mendona-HabitTracker</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_habit">Add habit</string>
+    <string name="save_completions">Save completions</string>
 
     <string name="add_habit_date_hint">Original Date (dd-MM-yyyy)</string>
     <string name="add_habit_name_hint">Habit Name</string>
@@ -10,4 +11,8 @@
     <string name="add_habit_dialog_title">Please input information about the new habit</string>
 
     <string name="add_habit_OK_button_text">Done</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
+    <string name="complete_habit_dialog_title">Complete habit for today?</string>
 </resources>
