Delete habit, delete completion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,19 @@
 
     <string name="add_habit_dialog_title">Please input information about the new habit</string>
 
-    <string name="add_habit_OK_button_text">Done</string>
+    <string name="done">Done</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="ok">OK</string>
+    <string name="back">Back</string>
 
     <string name="complete_habit_dialog_title">Complete habit for today?</string>
 
     <string name="choose_habit_to_see_completions">Choose habit to see completions</string>
     <string name="see_completions_title">Click on a completion to delete it</string>
+
+    <string name="choose_habit">Choose habit</string>
+
+    <string name="delete_habit_confirm">Are you sure you want to delete this habit?</string>
+    <string name="delete_completion_confirm">Are you sure you want to delete this completion?</string>
 </resources>
