--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="delete_habit">Delete habit</string>
     <string name="see_completions">See/Delete completions</string>
 
-    <string name="add_habit_date_hint">Original Date (dd-MM-yyyy)</string>
+    <string name="add_habit_date_text">Choose original date</string>
     <string name="add_habit_name_hint">Habit Name</string>
     <string name="add_habit_weekday_hint">Days of the week (Su, Mo, Tu, We, Th, Fr, Sa)</string>
+    <string name="invalid_habit">This habit is not valid. Try again</string>
 
     <string name="add_habit_dialog_title">Please input information about the new habit</string>
 
